<resources>
    <string name="app_name">IoT 2022 Group 7</string>
    <string name="txv_title_temp">Smart Home</string>
    <string name="txv_indoor_temp">Indoor temperature:</string>
    <string name="txv_indoor_heater">Heater:</string>
    <string name="txv_auto_heating">Auto Heating:</string>
    <string name="txv_default_hint">(°C)</string>
    <string name="txv_outdoor_light">Lighting:</string>
    <string name="txv_light_schedule">Lighting schedule:</string>
    <string name="txv_light_schedule_from">From:</string>
    <string name="txv_light_schedule_to">To:</string>
    <string name="txv_btn_confirm">Confirm</string>
    <string name="txv_show">Reading status...</string>
    <string name="txv_on">On</string>
    <string name="txv_off">Off</string>
</resources>