<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitybackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/indoorTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            android:padding="5dip"
            android:text="@string/txv_indoor_temp"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/indoorTempShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_show"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/indoorHeater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_indoor_heater"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/indoorHeaterShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_show"
            android:textColor="@color/blue_text"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/heatToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/autoHeating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_auto_heating"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/temp_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="5dip"
            android:inputType="numberDecimal"
            android:hint="(°C)"
            android:maxLength="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="5dip"
            android:text="-"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/temp_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="5dip"
            android:inputType="numberDecimal"
            android:hint="(°C)"
            android:maxLength="4" />

        <Button
            android:id="@+id/btnConfirmTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="Submit"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/outdoorLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/outdoorLightShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_show"
            android:textColor="@color/blue_text"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/lightToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/lightSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_light_schedule"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/lightScheduleFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_light_schedule_from"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <TimePicker
            android:id="@+id/time_picker_from"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/lightScheduleTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/txv_light_schedule_to"
            android:textColor="@color/black_alpha"
            android:textSize="20sp" />

        <TimePicker
            android:id="@+id/time_picker_to"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginLeft="22dp"
            android:timePickerMode="spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dip">

        <Button
            android:id="@+id/btnConfirmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:text="@string/txv_btn_confirm"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>