<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LampActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leftarrow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="508dp"
        android:background="#8A000000"
        android:orientation="horizontal"
        android:padding="5dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lightSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dip"
            android:text="@string/txv_light_schedule"
            android:textColor="@color/white"
            android:textSize="23sp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:cardCornerRadius="126dp"

            app:cardElevation="0dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="5dp"
        android:layout_marginTop="128dp"
        android:background="#8A000000"
        android:orientation="horizontal"
        android:padding="5dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            app:cardCornerRadius="15dp"

            app:cardElevation="0dp"

            />


        <TextView
            android:id="@+id/outdoorLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dip"
            android:text="@string/txv_outdoor_light"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/outdoorLightShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="5dip"

            android:text="@string/txv_show"
            android:textColor="@color/blue_text"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/lightToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:outlineSpotShadowColor="@color/black"
            android:shadowColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:background="#37636060"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:padding="5dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lightScheduleTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="5dip"
            android:text="@string/txv_light_schedule_to"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TimePicker
            android:id="@+id/time_picker_to"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginStart="22dp"
            android:timePickerMode="spinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="296dp"
        android:background="#2F8E8C8C"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:padding="5dip"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:cardCornerRadius="126dp"

            app:cardElevation="0dp"

            />


        <TextView
            android:id="@+id/lightScheduleFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="5dip"
            android:text="@string/txv_light_schedule_from"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/time_picker_from"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:backgroundTint="@color/white"

            android:timePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal"
        android:padding="5dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnConfirmTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:text="@string/txv_btn_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>